[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nthlayer-respond"
version = "1.0.0"
description = "DEPRECATED — Functionality moved to nthlayer-workers (RespondModule) as of v1.5; some operator-interactive commands will move to nthlayer-bench in a later release. Install nthlayer-workers instead."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 7 - Inactive",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "pyyaml>=6.0.1",
    "structlog>=24.1",
    "starlette>=0.40",
    "uvicorn>=0.30",
    "nthlayer-common>=0.1.4",
    "nthlayer-learn>=0.2.0",
    "python-multipart>=0.0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.8",
]

[project.scripts]
nthlayer-respond = "nthlayer_respond.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv.sources]
nthlayer-learn = { path = "../nthlayer-learn/lib/python" }
nthlayer-common = { path = "../nthlayer-common" }
